[metadata]
name = pyviz
version = attr: param.version.get_setupcfg_version
description = How to solve visualization problems with Python tools.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Scientific/Engineering
author = PyViz developers
author_email = developers@pyviz.org
maintainer = PyViz developers
maintainer_email = developers@pyviz.org
url = http://pyviz.org
project_urls =
    Bug Tracker = https://github.com/pyviz/pyviz/issues
    Documentation = http://pyviz.org
    Source Code = https://github.com/pyviz/pyviz

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    bokeh >=0.13.0
    holoviews >=1.10.7
    geoviews >=1.5.2
    hvplot >=0.2.1
    datashader >=0.6.7
    param >=1.7.0
    paramnb >=2.0.4
    parambokeh >=0.2.3

[options.extras_require]
tests =
    nbsmoke >=0.2.6
    flake8
    pytest >=2.8.5

doc =
    nbsite
    sphinx_ioam_theme

examples =
    pyct[cmd]
    ipython >=5
    numpy >=1.13
    rise
    dask[complete] >=0.18.1
    jupyter
    notebook >=5.4
    pandas
    xarray
    rise

examples_graphs =
    networkx
    scikit-image

examples_geo =
    cartopy
    geopandas

# unlikely to be installable via pip, but still declared for e.g. checking
indirect =
    streamz
    selenium         # Required for exporting Bokeh plots to PNG
    phantomjs        # Required for exporting Bokeh plots to PNG
    netcdf4          # Required for reading .nc files
    fastparquet      # Required for reading Parquet files
    python-snappy    # Required for reading snappy-compressed Parquet files
    ipywidgets       # Required for paramnb. Pinned to avoid JS errors for widgets CB: ==7 breaks stuff for me?
    cffi             # Unstated dependency of fastparquet?
    tornado          # Required for Jupyter notebook and bokeh server

# somehow conflicts with rise via conda; investigate
#temp =
#   msgpack-python
#   msgpack


[options.entry_points]
console_scripts =
    pyviz = pyviz.__main__:main

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]


# decide where/what later
[tool:pyctdev]

# where can comments go? i.e. add back reasons
pins =
    bokeh = 0.13.0
    holoviews = 1.10.7
    hvplot = 0.2.1
    geoviews = 1.5.2
    datashader = 0.6.7
    param = 1.7.0
    paramnb = 2.0.4
    parambokeh = 0.2.3
    ipython = 5
    dask = 0.18.1
    streamz = 0.3.0
    ipywidgets = 7
    tornado = 4.5.3

#conda_pins =
